<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:columnCount="3">

    <TextView
        android:text="@string/apt_no_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_row="0"
        android:layout_column="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="9"
        android:id="@+id/apt_no"
        android:layout_row="0"
        android:layout_column="1" />

    <TextView
        android:text="@string/arrival_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_row="1"
        android:layout_column="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="9"
        android:id="@+id/arrival_date"
        android:layout_row="1"
        android:layout_column="1" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="2"
        android:text="Change Date" />

    <TextView
        android:text="@string/received_by_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_row="2"
        android:layout_column="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="9"
        android:id="@+id/received_by"
        android:layout_column="1"
        android:layout_row="2" />

    <CheckBox
        android:text="@string/picked_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/parcel_picked"
        android:layout_row="3"
        android:layout_column="0" />

    <TextView
        android:text="@string/picked_by_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_row="4"
        android:layout_column="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_row="4"
        android:layout_column="1"
        android:ems="9"
        android:id="@+id/picked_by" />

    <TextView
        android:text="@string/picked_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:id="@+id/textView5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="9"
        android:id="@+id/picked_date"
        android:layout_row="5"
        android:layout_column="1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="2"
        android:text="Change Date" />
</GridLayout>